added migrations and custom user

--- a/WeConnect/Views/Shared/_Layout.cshtml
+++ b/WeConnect/Views/Shared/_Layout.cshtml
@@ -39,5 +39,6 @@
         </div>
         @RenderBody();
           </div>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
