added more foreign keys

--- a/WeConnect/Views/Home/Index.cshtml
+++ b/WeConnect/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "We Connect";
+
 }
 <form id="create-post" action="https://rroll.to/BRc2E9">
             <i class="post-icon fa-regular fa-2xl fa-circle-user"></i>
@@ -9,7 +10,7 @@
         <div id="posts">
             <div class="post">
                 <div class="profile-name">
-                    <i class="profile-icon fa-regular fa-2xl fa-circle-user"></i>Joji
+                    <i class="profile-icon fa-regular fa-2xl fa-circle-user"></i>@ViewData["name"]
                 </div>
                 <br />
                 <div class="post-container">
