--- a/WeConnect/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WeConnect/Areas/Identity/Pages/Account/Register.cshtml
@@ -39,6 +39,13 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-floating">
+                <select asp-for="Input.ThreadID" class="form-select" asp-items="@Model.Input.ThreadList">
+                <option disabled selected>--SELECT THREAD--</option>
+                </select>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
