--- a/WeConnect/Views/Home/Index.cshtml
+++ b/WeConnect/Views/Home/Index.cshtml
@@ -1,74 +1,48 @@
 ﻿@{
     ViewData["Title"] = "We Connect";
+    var postlists = ViewBag.uposts;
+    var uid = ViewBag.uid;
+    var ThreadID = ViewBag.ThreadID;
 
 }
-<form id="create-post" action="https://rroll.to/BRc2E9">
+@*model List<Posts> *@
+@model Posts
+<form id="create-post" asp-action="Index" asp-controller="Home" method="POST">
             <i class="post-icon fa-regular fa-2xl fa-circle-user"></i>
-            <textarea placeholder="Create a Post"></textarea>
+            <textarea placeholder="Create a Post" asp-for="Content"></textarea>
+            <input type="hidden" asp-for="UserID" value=@uid/>
+            <input type="hidden" asp-for="ThreadID" value=@ThreadID/>
+            <input type="hidden" asp-for="Timestamp" value="123"/>
+            <input type="hidden" asp-for="Likes" value="1"/>
+            <input type="hidden" asp-for="Dislikes" value="0"/>
             <button>Submit</button>
         </form>
         <div id="posts">
+            @foreach(var p in postlists){
             <div class="post">
                 <div class="profile-name">
-                    <i class="profile-icon fa-regular fa-2xl fa-circle-user"></i>@ViewData["name"]
+                    <i class="profile-icon fa-regular fa-2xl fa-circle-user"></i>@p.uname
                 </div>
                 <br />
                 <div class="post-container">
                     <div class="post-stats">
                         <br />
                         <div class="likes">
-                            <div class="rating">12</div>
+                            <div class="rating">@p.Likes</div>
                             <i class="fa-regular fa-face-smile"></i>
                         </div>
 
                         <div class="dislikes">
-                            <div class="rating">69</div>
+                            <div class="rating">@p.Dislikes</div>
                             <i class="fa-regular fa-thumbs-down"></i>
                         </div>
                     </div>
 
                     <div class="content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Distinctio, facere earum ipsam harum, delectus odio commodi omnis
-                        iste dolorum consequatur laboriosam tempore molestias ducimus
-                        obcaecati modi. Temporibus voluptatum sint voluptatibus! Lorem
-                        ipsum dolor sit, amet consectet adfaljdlkfakldklfjalkdjslfkjad
-                        fadlkfjakldjflkjkljsflkj Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Natus, quae.
+                        @p.Content
                     </div>
                 </div>
             </div>
-            <div class="post">
-                <div class="profile-name">
-                    <i class="profile-icon fa-regular fa-2xl fa-circle-user"></i>Joji
-                </div>
-                <br />
-                <div class="post-container">
-                    <div class="post-stats">
-                        <br />
-                        <div class="likes">
-                            <div class="rating">12</div>
-                            <i class="fa-regular fa-face-smile"></i>
-                        </div>
-
-                        <div class="dislikes">
-                            <div class="rating">69</div>
-                            <i class="fa-regular fa-thumbs-down"></i>
-                        </div>
-                    </div>
-
-                    <div class="content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem
-                        ipsum dolor sit amet consectetur adipisicing elit. Beatae magnam
-                        magni, nisi ratione dolorem ab quos voluptas fuga modi
-                        cupiditate.lorem30 Lorem, ipsum dolor sit amet consectetur
-                        adipisicing elit. Voluptate doloribus sint cupiditate explicabo
-                        error a unde, iure iusto, mollitia, at libero deleniti veniam
-                        assumenda excepturi ad animi voluptatibus facilis doloremque!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
-                        adipisci?
-                    </div>
-                </div>
-            </div>
+            }
         </div>
 
