--- a/WeConnect/Views/Home/Index.cshtml
+++ b/WeConnect/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Timestamp" value="123"/>
             <input type="hidden" asp-for="Likes" value="1"/>
             <input type="hidden" asp-for="Dislikes" value="0"/>
-            <button>Submit</button>
+            <button class="post-submit">Submit</button>
         </form>
         <div id="posts">
             @foreach(var p in postlists){
