--- a/WeConnect/Views/Home/Jobs.cshtml
+++ b/WeConnect/Views/Home/Jobs.cshtml
@@ -4,7 +4,7 @@
 <form id="create-post" action="https://rroll.to/BRc2E9">
     <i class="post-icon fa-regular fa-2xl fa-circle-user"></i>
     <textarea placeholder="Create a Post"></textarea>
-    <button>Submit</button>
+    <button class="post-submit">Submit</button>
 </form>
 <div id="posts">
     <div class="post">
